log.log
  File "ensembleRun.py", line 7
    for i in p
             ^
SyntaxError: invalid syntax
